--- a/client/main.scss
+++ b/client/main.scss
@@ -1,48 +1,50 @@
 /*********************************************
 / 0. RESET
 /********************************************/
-@import "../imports/ui/style/_0_reset.scss";
+@import "../imports/ui/styles/_0_reset.scss";
 
 /*********************************************
 / 1. GENERAL VARIABLES
 /********************************************/
-@import "../imports/ui/style/_1_colors.scss";
-@import "../imports/ui/style/_1_fonts.scss";
-@import "../imports/ui/style/_1_typesize.scss";
+@import "../imports/ui/styles/_1_colors.scss";
+@import url( 'https://fonts.googleapis.com/css?family=Open+Sans:300,500');
+@import "../imports/ui/styles/_1_fonts.scss";
+@import "../imports/ui/styles/_1_typesize.scss";
 
 /*********************************************
 / 2. RESPONSIVE VARIABLES & MIXINS
 /********************************************/
-@import "../imports/ui/style/_2_responsive.scss";
+@import "../imports/ui/styles/_2_responsive.scss";
 
 /*********************************************
 / 3. PAGE LAYOUT
 /********************************************/
-@import "../imports/ui/style/_3_layout.scss";
+@import "../imports/ui/styles/_3_layout.scss";
 
 /*********************************************
 / 4. APPLY TEXT STYLES, COLORS, SIZES
 /********************************************/
-@import "../imports/ui/style/_4_text.scss";
+@import "../imports/ui/styles/_4_text.scss";
 
 /*********************************************
 / 5. MINOR STYLE COMPONENTS
 /********************************************/
-@import "../imports/ui/style/_5_links.scss";
-@import "../imports/ui/style/_5_buttons.scss";
-@import "../imports/ui/style/_5_borders.scss";
-@import "../imports/ui/style/_5_inputs.scss";
+@import "../imports/ui/styles/_5_links.scss";
+// @import "../imports/ui/styles/_5_buttons.scss";
+// @import "../imports/ui/styles/_5_borders.scss";
+// @import "../imports/ui/styles/_5_inputs.scss";
 
 /*********************************************
-/ 8. MAJOR STYLE COMPONENTS
+/ 6. MAJOR STYLE COMPONENTS
 /********************************************/
-@import "../imports/ui/style/_8_stockbox.scss";
-@import "../imports/ui/style/_8_navigation.scss";
-@import "../imports/ui/style/_8_table.scss";
-@import "../imports/ui/style/_8_modal.scss";
-@import "../imports/ui/style/_8_footer.scss";
+@import "../imports/ui/styles/_6_navigation.scss";
+@import "../imports/ui/styles/_6_404.scss";
+@import "../imports/ui/styles/_6_copyright.scss";
+// @import "../imports/ui/styles/_6_table.scss";
+// @import "../imports/ui/styles/_6_modal.scss";
+// @import "../imports/ui/styles/_6_footer.scss";
 
 /*********************************************
-/ 9. UTILITIES
+/ 7. UTILITIES
 /********************************************/
-@import "../imports/ui/style/_9_utils.scss";
+@import "../imports/ui/styles/_7_utilities.scss";
