FInished sign-in/out and email verification

--- a/client/main.scss
+++ b/client/main.scss
@@ -7,7 +7,6 @@
 / 1. GENERAL VARIABLES
 /********************************************/
 @import "../imports/ui/styles/_1_colors.scss";
-@import url( 'https://fonts.googleapis.com/css?family=Open+Sans:300,500');
 @import "../imports/ui/styles/_1_fonts.scss";
 @import "../imports/ui/styles/_1_typesize.scss";
 
@@ -40,7 +39,7 @@
 @import "../imports/ui/styles/_6_navigation.scss";
 @import "../imports/ui/styles/_6_404.scss";
 @import "../imports/ui/styles/_6_copyright.scss";
-// @import "../imports/ui/styles/_6_table.scss";
+@import "../imports/ui/styles/_6_accounts.scss";
 // @import "../imports/ui/styles/_6_modal.scss";
 // @import "../imports/ui/styles/_6_footer.scss";
 
