Styled the account UI components

--- a/client/main.scss
+++ b/client/main.scss
@@ -29,7 +29,7 @@
 / 5. MINOR STYLE COMPONENTS
 /********************************************/
 @import "../imports/ui/styles/_5_links.scss";
-// @import "../imports/ui/styles/_5_buttons.scss";
+@import "../imports/ui/styles/_5_buttons.scss";
 // @import "../imports/ui/styles/_5_borders.scss";
 // @import "../imports/ui/styles/_5_inputs.scss";
 
