--- a/imports/ui/styles/_1_typesize.scss
+++ b/imports/ui/styles/_1_typesize.scss
@@ -4,4 +4,5 @@ $font__h2-font-size: 1.8rem;
 $font__h3-font-size: 1.5rem;
 $font__h4-font-size: 1.3rem;
 $font__warning-font-size: 0.9rem;
+$font__forms-size: 0.9rem;
 $font__line-height-body: 1.5;
