--- a/client/main.scss
+++ b/client/main.scss
@@ -40,6 +40,7 @@
 @import "../imports/ui/styles/_6_404.scss";
 @import "../imports/ui/styles/_6_copyright.scss";
 @import "../imports/ui/styles/_6_accounts.scss";
+@import "../imports/ui/styles/_6_books.scss";
 // @import "../imports/ui/styles/_6_modal.scss";
 // @import "../imports/ui/styles/_6_footer.scss";
 
