Styling and functional changes - styled homepage and 'add books' - can now delete books - added 'trade' button (not working) - added 'add book' button on home screen - wrote 'about' page

--- a/imports/ui/styles/_1_colors.scss
+++ b/imports/ui/styles/_1_colors.scss
@@ -6,6 +6,7 @@ $color__bg-color: lighten($color__project-theme, 53%);
 $color__mid-grey: #666;
 // $color__light-grey: #aaa;
 $color__dark-grey: #333;
+$color__alert: #b22;
 
 $color__body-font-color: darken($color__project-theme, 28%);
 $color__title-font-color: $color__project-theme;
