Added a filter dropdown to home page

--- a/client/main.scss
+++ b/client/main.scss
@@ -41,6 +41,7 @@
 @import "../imports/ui/styles/_6_copyright.scss";
 @import "../imports/ui/styles/_6_accounts.scss";
 @import "../imports/ui/styles/_6_books.scss";
+@import "../imports/ui/styles/_6_dropdowns.scss";
 // @import "../imports/ui/styles/_6_modal.scss";
 // @import "../imports/ui/styles/_6_footer.scss";
 
