--- a/imports/ui/styles/_1_colors.scss
+++ b/imports/ui/styles/_1_colors.scss
@@ -4,7 +4,7 @@ $color__project-inverse: lighten($color__project-theme, 68%);
 
 $color__bg-color: lighten($color__project-theme, 53%);
 $color__mid-grey: #666;
-// $color__light-grey: #aaa;
+$color__very-light-grey: #ccc;
 $color__dark-grey: #333;
 $color__alert: #b22;
 
