--- a/imports/ui/styles/_5_buttons.scss
+++ b/imports/ui/styles/_5_buttons.scss
@@ -10,7 +10,7 @@
     @include btn;
     border-radius: 3px;
     color: white;
-    padding: 5px 10px;
+    padding: 0.4em 0.5em;
     min-width: 120px;
     background-color: $color__project-theme;
     @include font__body-font;
