Started implementing trades - 'propose trade' button adds a trade to the database - trades counter implemented

--- a/imports/ui/styles/_1_colors.scss
+++ b/imports/ui/styles/_1_colors.scss
@@ -6,7 +6,8 @@ $color__bg-color: lighten($color__project-theme, 53%);
 $color__mid-grey: #666;
 $color__very-light-grey: #ccc;
 $color__dark-grey: #333;
-$color__alert: #b22;
+$color__alert: lighten(#8F2408, 12%);
+$color__default: #3458CC;
 
 $color__body-font-color: darken($color__project-theme, 28%);
 $color__title-font-color: $color__project-theme;
