--- a/imports/ui/styles/_6_dropdowns.scss
+++ b/imports/ui/styles/_6_dropdowns.scss
@@ -4,8 +4,8 @@
 /* the container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
-    // display: inline-block;
-    float: right;
+    display: inline-block;
+    // float: right;
 }
 
 /* dropdown content (hidden by default) */
@@ -52,4 +52,9 @@
     .dropbtn, .main-button {
         background-color: ligthen($color__project-theme, 3%);
     }
+}
+
+.button-container {
+    display: flex;
+    justify-content: space-between;
 }
