Only allow one offer per book (and bug fixes)

--- a/imports/ui/styles/_1_colors.scss
+++ b/imports/ui/styles/_1_colors.scss
@@ -4,7 +4,8 @@ $color__project-inverse: lighten($color__project-theme, 68%);
 
 $color__bg-color: lighten($color__project-theme, 53%);
 $color__mid-grey: #666;
-$color__very-light-grey: #ccc;
+$color__light-grey: #999;
+$color__very-light-grey: #ddd;
 $color__dark-grey: #333;
 $color__alert: lighten(#8F2408, 12%);
 $color__default: #3458CC;
