--- a/imports/ui/styles/_1_fonts.scss
+++ b/imports/ui/styles/_1_fonts.scss
@@ -1,5 +1,5 @@
-@import url( 'https://fonts.googleapis.com/css?family=Open+Sans:300,500');
-@import url( 'https://fonts.googleapis.com/css?family=Crete+Round');
+// @import url( 'https://fonts.googleapis.com/css?family=Open+Sans:300,500');
+// @import url( 'https://fonts.googleapis.com/css?family=Crete+Round');
 
 @mixin font__head-font {
     font-family: 'Crete Round', serif;
