Introduced specific css reset for mobile webkit forms

--- a/client/main.scss
+++ b/client/main.scss
@@ -1,6 +1,7 @@
 @import url( 'https://fonts.googleapis.com/css?family=Open+Sans:300,500');
 @import url( 'https://fonts.googleapis.com/css?family=Crete+Round');
 @import "../imports/ui/styles/_0_reset.scss";
+@import "../imports/ui/styles/_0_resetWebkitMobileForms.scss";
 @import "../imports/ui/styles/_1_colors.scss";
 @import "../imports/ui/styles/_1_fonts.scss";
 @import "../imports/ui/styles/_1_typesize.scss";
